implement CR budget

--- a/bb-frontend/src/index.html
+++ b/bb-frontend/src/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>BbFrontend</title>
+    <title>budgetbuddy</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./assets/images/bb.png"
+      style="width: 100rem; height: 100rem"
+    />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
