--- a/bb-frontend/src/index.html
+++ b/bb-frontend/src/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>budgetbuddy</title>
+    <title>Budgetbuddy</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="icon"
       type="image/x-icon"
       href="./assets/images/bb.png"
-      style="width: 100rem; height: 100rem"
+      style="width: 500px; height: 500px"
     />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
