--- a/bb-frontend/src/index.html
+++ b/bb-frontend/src/index.html
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
   </head>
   <body>
     <app-root></app-root>
